--- a/statistics.html
+++ b/statistics.html
@@ -80,7 +80,7 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://uscareers-prahs.icims.com/jobs/54112/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54112/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
@@ -163,7 +163,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=olqAafwf&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nDycPKwr'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=olqAafwf&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nDycPKwr'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -171,7 +171,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
+<h5><a href='https://boards.greenhouse.io/alyvant/jobs/4206185002'>Job Application for Computational Statistician at Alyvant</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -191,12 +191,12 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Jul 5, 2019 ... Apply online for the job of Biostatistician at Statistics & Data Corporation (SDC)</p>
 <hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/63990'>Principal Statistician - Medtronic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/63990'>Principal Statistician - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Careers That Change Lives The Principal Statistician will be responsible for 
 statistical aspects of study design and analysis of data from complex...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
+<h5><a href='https://boards.greenhouse.io/nanostring/jobs/4352434002'>Job Application for Senior Biostatistician at NanoString</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -237,11 +237,11 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://www.imperial.ac.uk/jobs/description/MED01243/research-fellow-statistics'>Research Fellow in Statistics | Jobs | Imperial College London</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.imperial.ac.uk/jobs/description/MED01243/research-fellow-statistics'>Research Fellow in Statistics | Jobs | Imperial College London</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/analista-sr-modelagem-estat%C3%ADstica-12927'>Analista Sr - Modelagem Estat?stica - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/analista-sr-modelagem-estat%C3%ADstica-12927'>Analista Sr - Modelagem Estat?stica - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -304,7 +304,7 @@ in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54113/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/54113/senior-statistical-programmer--remote/job'>Senior Statistical Programmer- REMOTE in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
@@ -329,7 +329,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-30016'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-30016'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -369,7 +369,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999691314112-application-support-statistician'>A123 Systems Application Support Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/A123Systems/743999691314112-application-support-statistician'>A123 Systems Application Support Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -385,7 +385,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691191098-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691191098-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -405,7 +405,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/statistical-modeller-mechelen-be'>
+<h5><a href='https://glpg.recruitee.com/o/statistical-modeller-mechelen-be'>
       Statistical Modeller - Mechelen, BE - Galapagos
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -435,7 +435,7 @@ statistical?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-ii-3125'>Biostatistician II - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-ii-3125'>Biostatistician II - PPD Careers</a></h5> 
 <p><span class="badge badge-light">Bengaluru, India</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
