--- a/internship.html
+++ b/internship.html
@@ -119,7 +119,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692229837-intern'>ShopUp Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -187,7 +187,7 @@
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787209'>Job Application for Channel Sales Intern (German Speaking) at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787209'>Job Application for Channel Sales Intern (German Speaking) at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Amsterdam, NL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -223,7 +223,7 @@
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787462'>Job Application for Customer Success Intern at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787462'>Job Application for Customer Success Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -259,7 +259,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
+<h5><a href='https://studyportals.workable.com/j/31B6D169F0'>Studyportals - Jobs: B2B Marketing Internship - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -275,11 +275,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/managedbyq/jobs/1783792'>Job Application for IT Support Intern at Managed By Q</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/managedbyq/jobs/1783792'>Job Application for IT Support Intern at Managed By Q</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364004002'>Job Application for Internship in Accounts Payable - Suppliers at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4364004002'>Job Application for Internship in Accounts Payable - Suppliers at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -352,7 +352,7 @@ Stuart.</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221570-customer-success-intern-marketing-client'>EASYRECRUE Customer Success Intern / Marketing client | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EASYRECRUE/743999692221570-customer-success-intern-marketing-client'>EASYRECRUE Customer Success Intern / Marketing client | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -414,7 +414,7 @@ Stuart.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://marketplacedistri.join.com/jobs/258473-internship-content-marketeer-it-in-lucca-tuscany-fast-growing-international-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
+<h5><a href='https://marketplacedistri.join.com/jobs/258473-internship-content-marketeer-it-in-lucca-tuscany-fast-growing-international-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
