--- a/data-engineer.html
+++ b/data-engineer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/data-engineer-9706'>Data Engineer - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -180,7 +180,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
-<h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://keywords-intl1.workable.com/j/120579048C'>Keywords Studios - Jobs: Big Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -386,7 +386,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p>4 days ago ... Senior Data Engineering Manager. San Francisco, CA. Data Engineering ? Data 
 Engineering. Full-time. Apply for this job. Quizlet's mission is to help students?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -425,15 +425,15 @@ YOUR TEAM. The successful candidate will join the team responsible for the?...</
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nexgPKw5'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=sPcd2gw1&__jvsc=Twitter&bid=nexgPKw5'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/dZ5uI8fZ7Q/Data-Engineer'>Data Engineer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/dZ5uI8fZ7Q/Data-Engineer'>Data Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/fy1ggz64q6ti9gu37waej7dejh'>Senior Data Engineer (OTT Streaming Services) | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/fy1ggz64q6ti9gu37waej7dejh'>Senior Data Engineer (OTT Streaming Services) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
